--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "microbundle --name DOMGuard",
     "dev": "microbundle watch",
     "serve": "serve .",
+    "publish": "git push origin && git push origin --tags",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish"
